--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,29 @@ body, html {
   background-color: #666;
 }
 
+
+.column {
+  width:auto;
+  height:auto;
+}
+
+.small {
+  width: 33%;
+  height:33%;
+}
+
+.medium {
+  width: 66%;
+  height: 66%;
+}
+
+.large {
+  width: 100%;
+  height: 100%;
+  
+}
+
+
 .container, h1 {
   width: 80%;
   max-width: 600px;
